resources/tests/valid_syntax/as_cast.ct
//Compilation successful!
fn hello()->i64: 10u64 + 19i64 as u64;