resources/tests/invalid_syntax/statement_semicolon.ct
//`Expected a ';'!
//1
fn main()->i64: pass